# openserverless-admin-api

./: .asf.yaml  .dockerignore  .env.example  .gitignore  .licenserc.yaml  Dockerfile  README.md  TODO.md  Taskfile.yml  TaskfileBuilder.yml  TaskfileDev.yml  pyproject.toml  run.sh
.github/: check.yaml  cisetup.sh
.github/workflows/: check.yaml  check.yml  image.yml
deploy/buildkit/: buildkitd.toml
deploy/samples/: Dockerfile  requirements.txt
docs/: DEPLOYER.md
nuvolaris/: __init__.py
nuvolaris/common/: kube_api_client.py  openwhisk_authorize.py  response_builder.py  validation.py
nuvolaris/couchdb/: couchdb_util.py
nuvolaris/error/: api_error.py
nuvolaris/impl/auth/: auth_service.py
nuvolaris/impl/onboard/: user_validation.py
nuvolaris/rest/: api.py  auth.py
nuvolaris/security/: ow_authorize.py  validate_ow_auth.py
olaris-api/: api-template.yaml  env.tpl  k3s-template.yaml  nginx-template.yaml  opsfile.yml
openserverless/: __init__.py  __main__.py
openserverless/common/: kube_api_client.py  oidc_validator.py  openwhisk_authorize.py  sso_namespace.py  utils.py  validation.py  whisk_user_data.py  whisk_user_generator.py
openserverless/config/: app_config.py
openserverless/couchdb/: couchdb_util.py
openserverless/impl/auth/: auth_service.py  oidc_device_flow_service.py
openserverless/impl/builder/: build_catalog.py  build_service.py
openserverless/impl/onboard/: user_validation.py
openserverless/rest/: api.py  auth.py  build.py
openserverless/security/: ow_authorize.py  validate_ow_auth.py
tests/: test_auth_service_oidc.py  test_build_api.py  test_build_catalog.py  test_build_service.py  test_oidc_device_flow_service.py  test_oidc_validator.py  test_sso_namespace.py
